--- a/aula06formulario/cadastro.html
+++ b/aula06formulario/cadastro.html
@@ -3,74 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="style.css">
     <title>cadastro</title>
 </head>
 <body>
-    <h1>Faça seu Cadastro!</h1>
     <main>
+        <h1>Faça seu Cadastro!</h1>
         <form>
-            <div>
+            <div class="div-stack">
                 <label for="name">Nome:</label>
-                <input type="name" name="name" id="name">
+                <input type="name" name="name" id="name" placeholder="digite seu nome">
             </div>
 
-            <div>
+            <div class="div-stack">
                 <label for="email">Email:</label>
                 <input type="email" name="email" id="email">
             </div>
 
-            <div>
+            <div class="div-stack">
                 <label for="password">Senha</label>
                 <input type="password" name="Senha" id="password">
             </div>
 
-            <div>
-                <label for="nascimento">Data de Nascimento</label>
+            <div class="div-stack">
+                <label for="nascimento">Data de Nascimento:</label>
                 <input type="date" name="date" id="date">
             </div>
 
-            <div>
-                <label for="Gênero">Gênero</label>
+            <div class="div-stack">
+                <label for="genero">Gênero:</label>
 
-                <input type="radio" name="Gênero" id="Gênero">
+                <input type="radio" name="genero" id="genero">
                 <label for="F">Feminino</label>
 
-                <input type="radio" name="Gênero" id="Gênero">
-                <label for="Masculino">Masculino</label>
+                <input type="radio" name="genero" id="genero">
+                <label for="M">Masculino</label>
 
-                <input type="radio" name="Gênero" id="Gênero">
+                <input type="radio" name="genero" id="genero">
                 <label for="Outro">Outro</label>
 
-                <textarea name="outro" id="outro" placeholder="Em caso de outro descreva."></textarea>
-            </div>
+                <textarea name="outro" id="outro" cols="30" placeholder="Em caso de outro descreva." ></textarea>
+            </div> 
 
-            <div>
                 <label>Stack:</label>
+
+            <div class="div-stack">
                 <input type="checkbox" name="checkbox" id="html">
                 <label for="html">html</label>
-
-                <input type="checkbox" name="checkbox" id="css">
-                <label for="css">css</label>
-
-                <input type="checkbox" name="checkbox" id="Javascript">
-                <label for="Javascript">Javascript</label>
-
-                <input type="checkbox" name="checkbox" id="node">
-                <label for="node">Node</label>
-
-                <input type="checkbox" name="checkbox" id="sql">
-                <label for="sql">Sql</label>
-
-                <div>
-                    <label for="turno">Selecionar turno:</label>
-                    <select name="" id="">
-                        <option value="manha">manhã</option>
-                        <option value="tarde">tarde</option>
-                        <option value="noite">noite</option>
-                    </select>
-                </div>
             </div>
+
+                <div class="div-stack">
+                    <input type="checkbox" name="checkbox" id="css">
+                    <label for="css">css</label>
+                </div>
+                <div class="div-stack">
+                    <input type="checkbox" name="checkbox" id="Javascript">
+                    <label for="Javascript">Javascript</label>
+                </div>
+                <div class="div-stack">
+                    <input type="checkbox" name="checkbox" id="node">
+                    <label for="node">Node</label>
+                </div>
+                <div class="div-stack">
+                    <input type="checkbox" name="checkbox" id="sql">
+                    <label for="sql">Sql</label>
+                </div>
+                    <div>
+                     <label for="turno">Selecionar turno:</label>
+                        <select name="turno" id="turno">
+                            <option value="manha">manhã</option>
+                            <option value="tarde">tarde</option>
+                            <option value="noite">noite</option>
+                        </select>
+                    </div>
             <button type="submit">Cadastrar</button>
         </form>
         <p>Já tem conta? <a href="formulario.html">login</a></p>
